--- a/Web Final Project/webpage1.html
+++ b/Web Final Project/webpage1.html
@@ -12,9 +12,9 @@
    <div class="main">
         <div class="navbar">
             <img src = "OS Logo.png" class="logo">
-            <div class="text">
-              <h2><span>O</span>pportunities <span>S</span>eeker</h2>
-          </div>
+              <div class="text">
+                <h2 id><span>O</span>pportunities <span>S</span>eeker</h2>
+              </div>
           
             <ul>
                 <li><a href ="#">HOME</a></li>
@@ -31,33 +31,32 @@
 <br>
 <br>
 
-        <div class="info">
-            <h1>Welcome to <span>O</span>pportunities <span>S</span>eeker!</h1><br>
-            <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
-        </div>
+<div class="info">
+    <h1>Welcome to <span>O</span>pportunities <span>S</span>eeker!</h1><br>
+    <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
+</div><br>
 
-<br>
-<div class="slideshow-container">
+  <div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\aupp-scholarship.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
-</div>
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\aupp-scholarship.jpg" width="auto" height="500px">
+        <div class="text">Caption Text</div>
+      </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\aupp-scholarship.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\medal.jpg" width="auto" height="500px">
+        <div class="text">Caption Two</div>
+      </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\aupp-scholarship.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\glass.png" width="auto" height="500px">
+        <div class="text">Caption Three</div>
+      </div>
 
-</div>
+  </div>
 <br>
 
 <div style="text-align:center">
@@ -87,10 +86,8 @@ function showSlides() {
   setTimeout(showSlides, 3000); // 3 seconds delay
 }
 </script>
-
    </div>
 
-   
 
 </body>
 </html>
