--- a/Web Final Project/webpage1.html
+++ b/Web Final Project/webpage1.html
@@ -9,15 +9,17 @@
 <!-- <link rel="stylesheet" href="data.css"> -->
 </head>
 <body>
+<div class="home">
+  <nav>
    <div class="main">
         <div class="navbar">
-            <img src = "OS Logo.png" class="logo">
+            <img src = "C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\OS Logo.png" class="logo">
               <div class="text">
                 <h2 id><span>O</span>pportunities <span>S</span>eeker</h2>
               </div>
           
             <ul>
-                <li><a href ="#">HOME</a></li>
+                <li class="ulstart"><a href ="#">HOME</a></li>
                 <li><a href ="#">SCHOLARSHIP</a></li>
                 <li><a href ="#">EVENTS</a></li>
                 <li><a href ="#">ABOUT US</a></li>
@@ -28,6 +30,7 @@
             </div>
 
         </div>
+  </nav>
 <br>
 <br>
 
@@ -40,19 +43,19 @@
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\aupp-scholarship.jpg" width="auto" height="500px">
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\aupp-scholarship.jpg" width="auto" height="500px">
         <div class="text">Caption Text</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\medal.jpg" width="auto" height="500px">
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\medal.jpg" width="auto" height="500px">
         <div class="text">Caption Two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\glass.png" width="auto" height="500px">
+        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\glass.png" width="auto" height="500px">
         <div class="text">Caption Three</div>
       </div>
 
@@ -63,6 +66,16 @@
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
+</div><br>
+</div>
+
+<div class="scholarship">
+
+  <div class="info">
+    <h1>cholarship</h1><br>
+    <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
+  </div><br>
+
 </div>
 
 <script src="webpage1.js"></script>
