--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -13,7 +13,7 @@
   <nav>
    <div class="main">
         <div class="navbar">
-            <img src = "C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\OS Logo.png" class="logo">
+            <img src = "images\OSLogo.png" class="logo">
               <div class="text">
                 <h2 id><span>O</span>pportunities <span>S</span>eeker</h2>
               </div>
@@ -27,6 +27,9 @@
             <div class="search-box">
                 <input class="search-txt" type="text" name="" placeholder="Type to search">
                 <a class="search-btn" href="#"> <i class="fas fa-search"></i></a>
+            </div>
+            <div class="TLicon">
+
             </div>
 
         </div>
@@ -43,19 +46,19 @@
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\aupp-scholarship.jpg" width="auto" height="500px">
+        <img src="images\aupp-scholarship.jpg" width="auto" height="500px">
         <div class="text">Caption Text</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\medal.jpg" width="auto" height="500px">
+        <img src="images\medal.jpg" width="auto" height="500px">
         <div class="text">Caption Two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="C:\Users\PT\Desktop\Study\AUPP\Sophomore\Web developement\Web Final Project\images\glass.png" width="auto" height="500px">
+        <img src="images\glass.png" width="auto" height="500px">
         <div class="text">Caption Three</div>
       </div>
 
@@ -72,7 +75,7 @@
 <div class="scholarship">
 
   <div class="info">
-    <h1>cholarship</h1><br>
+    <h1>Scholarship</h1><br>
     <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
   </div><br>
 
