--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -28,9 +28,6 @@
                 <input class="search-txt" type="text" name="" placeholder="Type to search">
                 <a class="search-btn" href="#"> <i class="fas fa-search"></i></a>
             </div>
-            <div class="TLicon">
-
-            </div>
 
         </div>
   </nav>
@@ -72,11 +69,37 @@
 </div><br>
 </div>
 
-<div class="scholarship">
+<!-- <div class="scholarship">
 
   <div class="info">
     <h1>Scholarship</h1><br>
     <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
+  </div><br>
+
+</div> -->
+
+<div class="footer">
+
+  <div>
+    <h1>Contact us</h1><br>
+      <form>
+        <div class="form_group">
+            <div class="form_item">
+              <input type="text" class="form_input" name="name" placeholder="Your name" required="">
+            </div>
+            <div class="form_item">
+              <input type="email" class="form_input" name="email" placeholder="Your email" required="">
+            </div>
+        </div>
+        <div class="form_item">
+          <input type="text" class="form_input" name="phone" placeholder="Your phone (optional)">
+        </div>
+        <div class="form_item">
+          <textarea name="text[body]" cols="30" rows="10" class="form_textarea" placeholder="Your message" required=""></textarea>
+        </div>
+      </form>
+
+    <h5>&copy 2022 OS Studios</h5>
   </div><br>
 
 </div>
