--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -9,6 +9,9 @@
 <!-- <link rel="stylesheet" href="data.css"> -->
 </head>
 <body>
+
+<!-- #####--HOME--##### -->
+
 <div class="home">
   <nav>
    <div class="main">
@@ -78,6 +81,9 @@
 
 </div> -->
 
+
+<!-- #####--FOOTER--##### -->
+
 <div class="footer">
 
   <div>
@@ -97,10 +103,17 @@
         <div class="form_item">
           <textarea name="text[body]" cols="30" rows="10" class="form_textarea" placeholder="Your message" required=""></textarea>
         </div>
+        <button type="submit" class="form_submit button button-primary">Send message
+
+        </button>
       </form>
 
+      <div class="">
+
+      </div>
+
+    </div><br>
     <h5>&copy 2022 OS Studios</h5>
-  </div><br>
 
 </div>
 
