--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -86,7 +86,7 @@
 
 <div class="footer">
 
-  <div>
+  <div class="contact">
     <h1>Contact us</h1><br>
       <form>
         <div class="form_group">
@@ -108,11 +108,20 @@
         </button>
       </form>
 
-      <div class="">
-
-      </div>
-
-    </div><br>
+    </div>
+    <div class="footer_block">
+      <h2 class="footer_title">Newsletter</h2>
+        <div class="footer_content">
+          <p>Subscribe to receive updates.</p>
+        </div>
+          <form method="post" id="footer-newsletter" accept-charset="UTF-8" class="footer_newsletter form">
+            <div class="form_item">
+              <input type="email" name="email" class="form_input" placeholder="Enter your email address" required="">
+            </div>
+            <button type="submit" class="form_submit button button-primary">Subscribe</button>
+          </form>
+  </div>
+    <br>
     <h5>&copy 2022 OS Studios</h5>
 
 </div>
