--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -120,8 +120,13 @@
             </div>
             <button type="submit" class="form_submit button button-primary">Subscribe</button>
           </form>
-  </div>
+      </div>
     <br>
+      <div class="icons">
+          <a href="https://twitter.com/Tuy_Pascal">
+            <button class="icon-btn">
+              <span class="twitter-icon"></span></button></a>
+      </div>
     <h5>&copy 2022 OS Studios</h5>
 
 </div>
