--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -27,10 +27,10 @@
                 <li><a href ="#">EVENTS</a></li>
                 <li><a href ="#">ABOUT US</a></li>
             </ul>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input class="search-txt" type="text" name="" placeholder="Type to search">
                 <a class="search-btn" href="#"> <i class="fas fa-search"></i></a>
-            </div>
+            </div> -->
 
         </div>
   </nav>
