--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -42,7 +42,7 @@
     <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
 </div><br>
 
-  <div class="slideshow-container">
+  <!-- <div class="slideshow-container">
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
@@ -62,6 +62,14 @@
         <div class="text">Caption Three</div>
       </div>
 
+  </div> -->
+
+  <div id="slider">
+    <figure>
+        <img src="images\aupp-scholarship.jpg" height="500px">
+        <img src="images\medal.jpg" height="500px">
+        <img src="images\glass.png" height="500px">
+    </figure>
   </div>
 <br>
 
