--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <img src = "images\OSLogo.png" class="logo">
               <div class="text">
-                <h2 id><span>O</span>pportunities <span>S</span>eeker</h2>
+                <h2><span>O</span>pportunities <span>S</span>eeker</h2>
               </div>
           
             <ul>
@@ -66,9 +66,9 @@
 
   <div id="slider">
     <figure>
-        <img src="images\aupp-scholarship.jpg" height="500px">
-        <img src="images\medal.jpg" height="500px">
-        <img src="images\glass.png" height="500px">
+        <img src="images\testimage-01.png" height="400px">
+        <img src="images\testimage-01.png" height="400px">
+        <img src="images\testimage-01.png" height="400px">
     </figure>
   </div>
 <br><br>
