--- a/WebFinalProject/webpage1.html
+++ b/WebFinalProject/webpage1.html
@@ -25,7 +25,7 @@
                 <li class="ulstart"><a href ="#">HOME</a></li>
                 <li><a href ="#">SCHOLARSHIP</a></li>
                 <li><a href ="#">EVENTS</a></li>
-                <li><a href ="#">ABOUT US</a></li>
+                <li><a href ="AboutUs.html">ABOUT US</a></li>
             </ul>
             <!-- <div class="search-box">
                 <input class="search-txt" type="text" name="" placeholder="Type to search">
@@ -126,16 +126,13 @@
       </div>
     <br>
       <div class="icons">
-          <a href="https://twitter.com/Tuy_Pascal">
+          <a target="_blank" href="https://twitter.com/Tuy_Pascal">
             <button class="icon-btn">
               <span class="twitter-icon"></span></button></a>
       </div>
     <h5>&copy 2022 OS Studios</h5>
 
 </div>
-
-<script src="webpage1.js"></script>
-   </div>
 
 
 </body>
