--- a/WebFinalProject/home.html
+++ b/WebFinalProject/home.html
@@ -4,8 +4,9 @@
 <title>Opportunities Seeker</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="webpage1.css">
+<link rel="stylesheet" href="home.css">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <!-- <link rel="stylesheet" href="data.css"> -->
 </head>
 <body>
@@ -22,15 +23,11 @@
               </div>
           
             <ul>
-                <li class="ulstart"><a href ="#">HOME</a></li>
-                <li><a href ="#">SCHOLARSHIP</a></li>
-                <li><a href ="#">EVENTS</a></li>
+                <li class="ulstart"><a href ="home.html">HOME</a></li>
+                <li><a href ="scholarships.html">SCHOLARSHIP</a></li>
+                <li><a href ="events.html">EVENTS</a></li>
                 <li><a href ="AboutUs.html">ABOUT US</a></li>
             </ul>
-            <!-- <div class="search-box">
-                <input class="search-txt" type="text" name="" placeholder="Type to search">
-                <a class="search-btn" href="#"> <i class="fas fa-search"></i></a>
-            </div> -->
 
         </div>
   </nav>
@@ -42,28 +39,6 @@
     <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
 </div><br>
 
-  <!-- <div class="slideshow-container">
-
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="images\aupp-scholarship.jpg" width="auto" height="500px">
-        <div class="text">Caption Text</div>
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="images\medal.jpg" width="auto" height="500px">
-        <div class="text">Caption Two</div>
-      </div>
-
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="images\glass.png" width="auto" height="500px">
-        <div class="text">Caption Three</div>
-      </div>
-
-  </div> -->
-
   <div id="slider">
     <figure>
         <img src="images\testimage-01.png" height="400px">
@@ -74,16 +49,6 @@
 <br><br>
 
 </div>
-
-<!-- <div class="scholarship">
-
-  <div class="info">
-    <h1>Scholarship</h1><br>
-    <h3>We are here to help you find scholarships,<br> competitions, trainings, and exchange programs.</h3>
-  </div><br>
-
-</div> -->
-
 
 <!-- #####--FOOTER--##### -->
 
