--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Opportunities Seeker</title>
+<title>About Us</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="home.css">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-
+<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
 <body>
 
@@ -30,24 +30,32 @@
    </nav>
     
     <div class="info">
-        <h1><span>A</span>bout <span>u</span>s</h1>
+        <h1><span>A</span>bout <span>U</span>s</h1>
         <h2>Who we are</h2>
-        <p>
-            [content]
+        <br>
+        <p style="font-size: 19px;">
+          We gather brief information related to 
+          scholarships, competitions, trainings, exchange programs, and a variety of 
+          events for students and youth to explore and experience for themselves 
+          outside from school. It helps students and youth to find summary information easily and quickly in the website.
         </p>
         <h2>Vision</h2>
-        <p>
-            [content]
+        <br>
+        <p style="font-size: 19px;">
+            To increase the amount of students participating in extracurricular activites by creating local 
+            and international opportunities in the community and country all around the world. 
         </p>
         <h2>Mission</h2>
-        <p>
-            [content]
+        <br>
+        <p style="font-size: 19px;">
+            To find information related to extracurricular activites from the globe 
+            by improving social and community skills in helping academics achievement and performance.
         </p>
         <h2>Core values</h2>
-        <p>
-            [content]
-        </p>
+        <br>
+        <p style="font-size: 19px;">We believe in <strong>Trust</strong>, <strong>Integrity</strong>, and <strong>Reliability</strong>.</p>
 
+        <br>
     </div>
 
 </div>
