--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Opportunities Seeker</title>
+<title>Home</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="home.css">
@@ -17,14 +17,14 @@
   <nav>
    <div class="main">
         <div class="navbar">
-            <img src = "images\OSLogo.png" class="logo">
+            <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
               <div class="text">
                 <h2><span>O</span>pportunities <span>S</span>eeker</h2>
               </div>
           
             <ul>
                 <li class="ulstart"><a href ="home.html">HOME</a></li>
-                <li><a href ="scholarships.html">SCHOLARSHIP</a></li>
+                <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
                 <li><a href ="events.html">EVENTS</a></li>
                 <li><a href ="AboutUs.html">ABOUT US</a></li>
             </ul>
