--- a/AYCC.html
+++ b/AYCC.html
@@ -5,22 +5,43 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
+
 <body>
-    <h2>The U.S Ambassador's Youth Town Hall 2022</h2>
-    <img src="images/competition 6.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
+
+    <nav>
+        <div class="navbar homelist">
+            <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+              <div class="text">
+                <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+              </div>
+          
+            <ul>
+                <li id="ulstart"><a href ="home.html">HOME</a></li>
+                <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+                <li><a href ="events.html">EVENTS</a></li>
+                <li><a href ="AboutUs.html">ABOUT US</a></li>
+            </ul>
+
+        </div>
+  </nav>
+
+    <h2 class="title">The U.S Ambassador's Youth Town Hall 2022</h2>
+    <img class="poster" src="images/competition 6.jpg" alt="aupp">
+    <div class="container list">
+    <ul class="inf">
         <li>Country: Cambodia</li>
         <li>Organization: The U.S. Ambassador's Youth Council</li>
         <li>Benefits: Certificate</li>
         <li>Deadline: 17 November 2022</li>
     </ul>
     </div>
-    <div class="button">
-    <a href="https://www.facebook.com/theUSAYC" target="_blank"><button>Official Website</button></a>
+    <div class="greenbtn">
+    <a href="https://www.facebook.com/theUSAYC" target="_blank">
+        <button class="greenbutton">Read more</button></a>
     </div>
 </body>
 </html>
