--- a/aupp.html
+++ b/aupp.html
@@ -5,32 +5,55 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
+
 <body>
-    <h2>American University of Phnom Penh Scholarship 2022</h2>
-    <img src="images/aupp-scholarship.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
-        <li>Country: Cambodia</li>
-        <li>Institution: American University of Phnom Penh</li>
-        <li>Degree Level: Bachelor's Degree</li>
-        <li>Majors:
-            <ol>
-                <li>Law</li>
-                <li>Global Affairs</li>
-                <li>Information and Communications Technology</li>
-                <li>Information Technology Management</li>
-                <li>Business</li>
-            </ol> 
-        </li>
-        <li>Benefits: Full Scholarship (65 Places)</li>
-        <li>Deadline: 17 November 2022</li>
-    </ul>
+
+    <nav>
+        <div class="navbar homelist">
+            <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+              <div class="text">
+                <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+              </div>
+          
+            <ul>
+                <li id="ulstart"><a href ="home.html">HOME</a></li>
+                <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+                <li><a href ="events.html">EVENTS</a></li>
+                <li><a href ="AboutUs.html">ABOUT US</a></li>
+            </ul>
+
+        </div>
+  </nav>
+
+    <h2 class="title">American University of Phnom Penh Scholarship 2022</h2>
+    <img class="poster" src="images/aupp-scholarship.jpg" alt="aupp">
+    
+    <div class="container list">
+        <ul class="inf">
+            <li>Country: Cambodia</li>
+            <li>Institution: American University of Phnom Penh</li>
+            <li>Degree Level: Bachelor's Degree</li>
+            <li>Majors:
+                <ol>
+                    <li>Law</li>
+                    <li>Global Affairs</li>
+                    <li>Information and Communications Technology</li>
+                    <li>Information Technology Management</li>
+                    <li>Business</li>
+                </ol> 
+            </li>
+            <li>Benefits: Full Scholarship (65 Places)</li>
+            <li>Deadline: 17 November 2022</li>
+        </ul>
     </div>
-    <div class="button">
-    <a href="https://www.aupp.edu.kh/tuition-scholarships-financial-aid-loans/aupp-scholarships/" target="_blank"><button>Official Website</button></a>
+
+    <div class="greenbtn">
+    <a href="https://www.aupp.edu.kh/tuition-scholarships-financial-aid-loans/aupp-scholarships/" target="_blank">
+        <button class="greenbutton">Read more</button></a>
     </div>
 </body>
 </html>
