--- a/fulbright.html
+++ b/fulbright.html
@@ -5,24 +5,45 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
+
 <body>
-    <h2>FulBright Scholarship 2022</h2>
-    <img src="images/fulbright.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
-        <li>Country: USA</li>
-        <li>Institution: Any</li>
-        <li>Degree Level: Master/PHD's Degree</li>
-        <li>Majors: Any</li>
-        <li>Benefits: Full Scholarship (4000 places)</li>
-        <li>Deadline: 1 May 2022 (Cambodia)</li>
-    </ul>
+
+<nav>
+    <div class="navbar homelist">
+        <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+            <div class="text">
+            <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+            </div>
+        
+        <ul>
+            <li id="ulstart"><a href ="home.html">HOME</a></li>
+            <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+            <li><a href ="events.html">EVENTS</a></li>
+            <li><a href ="AboutUs.html">ABOUT US</a></li>
+        </ul>
+
     </div>
-    <div class="button">
-    <a href="https://kh.usembassy.gov/fulbright-student-fellowship/" target="_blank"><button>Official Website</button></a>
+</nav>
+
+    <h2 class="title">FulBright Scholarship 2022</h2>
+    <img class="poster" src="images/fulbright.jpg" alt="aupp">
+    <div class="container list">
+        <ul class="inf">
+            <li>Country: USA</li>
+            <li>Institution: Any</li>
+            <li>Degree Level: Master/PHD's Degree</li>
+            <li>Majors: Any</li>
+            <li>Benefits: Full Scholarship (4000 places)</li>
+            <li>Deadline: 1 May 2022 (Cambodia)</li>
+        </ul>
+    </div>
+    <div class="greenbtn">
+    <a href="https://kh.usembassy.gov/fulbright-student-fellowship/" target="_blank">
+        <button class="greenbutton">Official Website</button></a>
     </div>
 </body>
 </html>
