--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <title>Home</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="home.css">
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+<link rel="stylesheet" href="css\home.css">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
-<!-- <link rel="stylesheet" href="data.css"> -->
+
 </head>
 <body>
 
@@ -15,15 +15,14 @@
 
 <div class="home">
   <nav>
-   <div class="main">
-        <div class="navbar">
+        <div class="navbar homelist">
             <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
               <div class="text">
                 <h2><span>O</span>pportunities <span>S</span>eeker</h2>
               </div>
           
             <ul>
-                <li class="ulstart"><a href ="home.html">HOME</a></li>
+                <li id="ulstart"><a href ="home.html">HOME</a></li>
                 <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
                 <li><a href ="events.html">EVENTS</a></li>
                 <li><a href ="AboutUs.html">ABOUT US</a></li>
