--- a/chevening.html
+++ b/chevening.html
@@ -5,14 +5,34 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>]
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
+
 <body>
-    <h2>Chevening Scholarship 2022</h2>
-    <img src="images/chevening.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
+
+    <nav>
+        <div class="navbar homelist">
+            <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+              <div class="text">
+                <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+              </div>
+          
+            <ul>
+                <li id="ulstart"><a href ="home.html">HOME</a></li>
+                <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+                <li><a href ="events.html">EVENTS</a></li>
+                <li><a href ="AboutUs.html">ABOUT US</a></li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <h2 class="title">Chevening Scholarship 2022</h2>
+    <img class="poster" src="images/chevening.jpg" alt="aupp">
+    <div class="container list">
+    <ul class="inf">
         <li>Country: UK</li>
         <li>Institution: Any</li>
         <li>Degree Level: Master/PHD's Degree</li>
@@ -21,8 +41,9 @@
         <li>Deadline: 29 April 2022</li>
     </ul>
     </div>
-    <div class="button">
-    <a href="https://www.chevening.org/scholarships/" target="_blank"><button>Official Website</button></a>
+    <div class="greenbtn">
+    <a href="https://www.chevening.org/scholarships/" target="_blank">
+        <button class="greenbutton">Official Website</button></a>
     </div>
 </body>
 </html>
