--- a/events.html
+++ b/events.html
@@ -3,41 +3,31 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Events</title>
-
-<!--Stylesheet----------------------------------->
-<link rel="stylesheet" type="text/css" href="css/nav.css"/>
-<link rel="stylesheet" type="text/css" href="home.css"/>
-
-<!--fav-icon------------------------------------->
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
+<link rel="stylesheet" type="text/css" href="css/nav.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
 
-<!--poppins-font-family-------------------------->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+<title>Events</title>
 </head>
 
 <body>
   <div class="home">
     <nav>
-      <div class="main">
-           <div class="navbar">
-               <img src = "images\OSLogo.png" class="logo">
-                 <div class="text">
-                   <h2><span>O</span>pportunities <span>S</span>eeker</h2>
-                 </div>
-             
-               <ul>
-                   <li class="ulstart"><a href ="home.html">HOME</a></li>
-                   <li><a href ="scholarships.html">SCHOLARSHIP</a></li>
-                   <li><a href ="events.html">EVENTS</a></li>
-                   <li><a href ="AboutUs.html">ABOUT US</a></li>
-               </ul>
-   
-           </div>
-     </nav>
+      <div class="navbar homelist">
+          <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+            <div class="text">
+              <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+            </div>
+        
+          <ul>
+              <li id="ulstart"><a href ="home.html">HOME</a></li>
+              <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+              <li><a href ="events.html">EVENTS</a></li>
+              <li><a href ="AboutUs.html">ABOUT US</a></li>
+          </ul>
+
+      </div>
+</nav>
   </div>
 
 
