--- a/kit.html
+++ b/kit.html
@@ -5,14 +5,32 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
 <body>
-    <h2>Kirirom Institute of Technology Scholarship 2022</h2>
-    <img src="images/kit-scholarship.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
+
+<nav>
+    <div class="navbar homelist">
+        <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+            <div class="text">
+            <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+            </div>
+        
+        <ul>
+            <li id="ulstart"><a href ="home.html">HOME</a></li>
+            <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+            <li><a href ="events.html">EVENTS</a></li>
+            <li><a href ="AboutUs.html">ABOUT US</a></li>
+        </ul>
+    </div>
+</nav>
+
+    <h2 class="title">Kirirom Institute of Technology Scholarship 2022</h2>
+    <img class="poster" src="images/kit-scholarship.jpg" alt="aupp">
+    <div class="container list">
+    <ul class="inf">
         <li>Country: Cambodia</li>
         <li>Institution: Kirirom Institute of Technology </li>
         <li>Degree Level: Bachelor's Degree</li>
@@ -28,8 +46,9 @@
         <li>Deadline: 20 February 2022</li>
     </ul>
     </div>
-    <div class="button">
-    <a href="https://kit.edu.kh/accepting-applications/" target="_blank"><button>Official Website</button></a>
+    <div class="greenbtn">
+    <a href="https://kit.edu.kh/accepting-applications/" target="_blank">
+        <button class="greenbutton">Read more</button></a>
     </div>
 </body>
 </html>
