--- a/piu.html
+++ b/piu.html
@@ -5,36 +5,55 @@
 <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 <link rel="stylesheet" type="text/css" href="css/data.css"/>
+<link rel="stylesheet" type="text/css" href="css\home.css"/>
+
 <title>Scholarship</title>
-<link rel="icon" type="image/x-icon" href="images/OS Logo.png">
 </head>
 <body>
-    <h2>Paragon International University Scholarship 2022</h2>
-    <img src="images/piu-scholarship.jpg" alt="aupp">
-    <div class="container">
-    <ul class="info">
-        <li>Country: Cambodia</li>
-        <li>Institution: Paragon International University</li>
-        <li>Degree Level: Bachelor's Degree</li>
-        <li>Majors:
-            <ol>
-                <li>Architecture</li>
-                <li>Civil Engineering</li>
-                <li>Industrial Engineering</li>
-                <li>Computer Science</li>
-                <li>Management of Information Systems</li>
-                <li>Banking and Finance</li>
-                <li>Business Administration</li>
-                <li>International Trade and Logistics</li>
-                <li>International Relations</li>
-            </ol> 
-        </li>
-        <li>Benefits: Full Scholarship</li>
-        <li>Deadline: 10 May 2022</li>
-    </ul>
+
+<nav>
+    <div class="navbar homelist">
+        <a href="home.html"><img src = "images\OSLogo.png" class="logo"></a>
+            <div class="text">
+            <h2><span>O</span>pportunities <span>S</span>eeker</h2>
+            </div>
+        
+        <ul>
+            <li id="ulstart"><a href ="home.html">HOME</a></li>
+            <li><a href ="scholarships.html">SCHOLARSHIPS</a></li>
+            <li><a href ="events.html">EVENTS</a></li>
+            <li><a href ="AboutUs.html">ABOUT US</a></li>
+        </ul>
     </div>
-    <div class="button">
-    <a href="https://paragoniu.edu.kh/admissions/scholarships/" target="_blank"><button>Official Website</button></a>
+</nav>
+
+    <h2 class="title">Paragon International University Scholarship 2022</h2>
+    <img class="poster" src="images/piu-scholarship.jpg" alt="aupp">
+    <div class="container list">
+        <ul class="inf">
+            <li>Country: Cambodia</li>
+            <li>Institution: Paragon International University</li>
+            <li>Degree Level: Bachelor's Degree</li>
+            <li>Majors:
+                <ol>
+                    <li>Architecture</li>
+                    <li>Civil Engineering</li>
+                    <li>Industrial Engineering</li>
+                    <li>Computer Science</li>
+                    <li>Management of Information Systems</li>
+                    <li>Banking and Finance</li>
+                    <li>Business Administration</li>
+                    <li>International Trade and Logistics</li>
+                    <li>International Relations</li>
+                </ol> 
+            </li>
+            <li>Benefits: Full Scholarship</li>
+            <li>Deadline: 10 May 2022</li>
+        </ul>
+    </div>
+    <div class="greenbtn">
+    <a href="https://paragoniu.edu.kh/admissions/scholarships/" target="_blank">
+        <button class="greenbutton">Read more</button></a>
     </div>
 </body>
 </html>
