--- a/AboutUs.html
+++ b/AboutUs.html
@@ -102,6 +102,13 @@
               <button class="icon-btn">
                 <span class="twitter-icon"></span></button></a>
         </div>
+
+          <div class="clear"></div>
+        <div class="icons">
+          <a target="_blank" href="https://www.facebook.com/OpportunitiesSeeker">
+            <button class="icon-btn">
+              <span class="facebook-icon"></span></button></a>
+        </div>
       <h5>&copy 2022 OS Studios</h5>
   
   </div>
