--- a/fulbright.html
+++ b/fulbright.html
@@ -43,7 +43,7 @@
     </div>
     <div class="greenbtn">
     <a href="https://kh.usembassy.gov/fulbright-student-fellowship/" target="_blank">
-        <button class="greenbutton">Official Website</button></a>
+        <button class="greenbutton">Read more</button></a>
     </div>
 </body>
 </html>
