--- a/home.html
+++ b/home.html
@@ -40,18 +40,39 @@
 
   <div id="slider">
     <figure>
-        <img src="images\testimage-01.png" height="400px">
-        <img src="images\testimage-01.png" height="400px">
-        <img src="images\testimage-01.png" height="400px">
+        <a href="piu.html"><img src="images\PIUSlide-01.png"></a>
+        <a href="kit.html"><img src="images\KITSlide-01.png"></a>
+        <a href="aupp.html"><img src="images\auppSlide-01.png"></a>
     </figure>
   </div>
 <br><br>
+</div>
 
+<div class="scholarship">
+  <div class="Tcenter">
+    <div class="info">
+      <h1>Scholarship</h1><br>
+      <h3>Looking for scholarships?<br> We have just the right thing for you!</h3><br>
+    </div><br>
+      <a href="scholarships.html"><div class="HomeSch"></div></a>
+  </div>
+</div>
+
+<div class="events">
+  <div class="Tcenter">
+    <div class="info">
+      <h1>Events</h1><br>
+      <h3>Looking for exciting events?<br> We have every events up to date here!</h3><br>
+    </div><br>
+      <a href="events.html"><div class="HomeSch"></div></a>
+  </div>
 </div>
 
 <!-- #####--FOOTER--##### -->
 
 <div class="footer">
+
+<!-- ###-CONTACT-### -->
 
   <div class="contact">
     <h1>Contact us</h1><br>
@@ -64,31 +85,29 @@
               <input type="email" class="form_input" name="email" placeholder="Your email" required="">
             </div>
         </div>
-        <div class="form_item">
-          <input type="text" class="form_input" name="phone" placeholder="Your phone (optional)">
-        </div>
-        <div class="form_item">
-          <textarea name="text[body]" cols="30" rows="10" class="form_textarea" placeholder="Your message" required=""></textarea>
-        </div>
-        <button type="submit" class="form_submit button button-primary">Send message
-
-        </button>
+            <div class="form_item">
+              <input type="text" class="form_input" name="phone" placeholder="Your phone (optional)">
+            </div>
+            <div class="form_item">
+              <textarea name="text[body]" cols="30" rows="10" class="form_textarea" placeholder="Your message" required=""></textarea>
+            </div>
+        <button type="submit" class="form_submit button button-primary">Send message</button>
       </form>
+  </div>
 
-    </div>
     <div class="footer_block">
       <h2 class="footer_title">Newsletter</h2>
         <div class="footer_content">
           <p>Subscribe to receive updates.</p>
         </div>
           <form method="post" id="footer-newsletter" accept-charset="UTF-8" class="footer_newsletter form">
-            <div class="form_item">
-              <input type="email" name="email" class="form_input" placeholder="Enter your email address" required="">
-            </div>
+              <div class="form_item">
+                <input type="email" name="email" class="form_input" placeholder="Enter your email address" required="">
+              </div>
             <button type="submit" class="form_submit button button-primary">Subscribe</button>
           </form>
-      </div>
-    <br>
+    </div><br>
+
       <div class="icons">
           <a target="_blank" href="https://twitter.com/Tuy_Pascal">
             <button class="icon-btn">
@@ -105,7 +124,6 @@
     <h5>&copy 2022 OS Studios</h5>
 
 </div>
-
 
 </body>
 </html>
