--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
       <h1>Events</h1><br>
       <h3>Looking for exciting events?<br> We have every events up to date here!</h3><br>
     </div><br>
-      <a href="events.html"><div class="HomeSch"></div></a>
+      <a href="events.html"><div class="HomeEvent"></div></a>
   </div>
 </div>
 
