--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
 <div class="scholarship">
   <div class="Tcenter">
     <div class="info">
-      <h1>Scholarship</h1><br>
+      <h1>Scholarships</h1><br>
       <h3>Looking for scholarships?<br> We have just the right thing for you!</h3><br>
     </div><br>
       <a href="scholarships.html"><div class="HomeSch"></div></a>
