--- a/australianawards.html
+++ b/australianawards.html
@@ -45,5 +45,61 @@
     <a href="https://www.dfat.gov.au/people-to-people/australia-awards/Pages/how-to-apply-for-an-australia-awards-scholarship" target="_blank">
         <button class="greenbutton">Read more</button></a>
     </div>
+     <!-- #####--FOOTER--##### -->
+
+<div class="footer">
+
+    <div class="contact">
+      <h1>Contact us</h1><br>
+        <form>
+          <div class="form_group">
+              <div class="form_item">
+                <input type="text" class="form_input" name="name" placeholder="Your name" required="">
+              </div>
+              <div class="form_item">
+                <input type="email" class="form_input" name="email" placeholder="Your email" required="">
+              </div>
+          </div>
+          <div class="form_item">
+            <input type="text" class="form_input" name="phone" placeholder="Your phone (optional)">
+          </div>
+          <div class="form_item">
+            <textarea name="text[body]" cols="30" rows="10" class="form_textarea" placeholder="Your message" required=""></textarea>
+          </div>
+          <button type="submit" class="form_submit button button-primary">Send message
+  
+          </button>
+        </form>
+  
+      </div>
+      <div class="footer_block">
+        <h2 class="footer_title">Newsletter</h2>
+          <div class="footer_content">
+            <p>Subscribe to receive updates.</p>
+          </div>
+            <form method="post" id="footer-newsletter" accept-charset="UTF-8" class="footer_newsletter form">
+              <div class="form_item">
+                <input type="email" name="email" class="form_input" placeholder="Enter your email address" required="">
+              </div>
+              <button type="submit" class="form_submit button button-primary">Subscribe</button>
+            </form>
+        </div>
+      <br>
+        <div class="icons">
+            <a target="_blank" href="https://twitter.com/Tuy_Pascal">
+              <button class="icon-btn">
+                <span class="twitter-icon"></span></button></a>
+        </div>
+  
+          <div class="clear"></div>
+        <div class="icons">
+          <a target="_blank" href="https://www.facebook.com/OpportunitiesSeeker">
+            <button class="icon-btn">
+              <span class="facebook-icon"></span></button></a>
+          
+        </div>
+      <h5>&copy 2022 OS Studios</h5>
+  
+  </div>
 </body>
 </html>
