--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,26 +33,38 @@
         <h2>Who we are</h2>
         <br>
         <p style="font-size: 19px;">
-          We gather brief information related to 
-          scholarships, competitions, trainings, exchange programs, and a variety of 
-          events for students and youth to explore and experience for themselves 
-          outside from school. It helps students and youth to find summary information easily and quickly in the website.
+          We are a team of young students who are inspired to make our world a better place, 
+          we cannot accomplish this goal alone, 
+          so we want to create a website that gathers brief information related to 
+          scholarships, competitions, trainings, exchange programs, and a variety of events for students and youth 
+          to explore, experience and get the opportunity to better themselves. 
+          Our website welcomes individuals of any age but mainly targets
+           young and bright minded individuals that seek to make our world a better place.
         </p>
         <h2>Vision</h2>
         <br>
         <p style="font-size: 19px;">
-            To increase the amount of students participating in extracurricular activites by creating local 
-            and international opportunities in the community and country all around the world. 
+          At our current state of our project, 
+          we are first limiting the reach to only in Cambodia and will spread our roots when our project will continue to succeed! 
+          <br>To make things exciting, we will be hosting numerous events and competitions of our own, 
+          and to make things more exciting and publicly available to all young participants. 
+          <br>EVERYONE will be able to join FREE of charge!
+          
         </p>
         <h2>Mission</h2>
         <br>
         <p style="font-size: 19px;">
-            To find information related to extracurricular activites from the globe 
-            by improving social and community skills in helping academics achievement and performance.
+          Our mission is to share important and useful information and events so that the people 
+          from our young generation have the chance and opportunity to shine and reach an inspiring goal.
         </p>
         <h2>Core values</h2>
         <br>
-        <p style="font-size: 19px;">We believe in <strong>Trust</strong>, <strong>Integrity</strong>, and <strong>Reliability</strong>.</p>
+        <p style="font-size: 19px;">
+          We believe in <strong>Trust</strong>, <strong>Reliability</strong> & <strong>Inspiration</strong>…
+          But most importantly, we believe in <span>YOU</span>
+
+          <!-- We believe in <strong>Trust</strong>, <strong>Integrity</strong>, and <strong>Reliability</strong>. -->
+        </p>
 
         <br>
     </div>
